# EVE-valuation-engine

./: .dockerignore  .gcloudignore  .replit  AUTH_PERSISTENCE_PLAN.md  CLAUDE.md  Dockerfile  Mangrove_Test.xlsx  alembic.ini  app.py  app.yaml  app_broken_backup.py  app_coordinate_version.py  app_optimized.py  app_simple.py  create_header.py  database.py  debug_ecosystem_detection.py  debug_regional_factor.py  debug_time_series_issue.py  debug_water_detection.py  demo_corrected_regional_approach.py  demo_quality_factor_inputs.py  deploy_major.ps1  detailed_esvd_study_value_mappings.txt  esvd_coefficient_study_mappings.txt  header_b64.txt  print_all_esvd_values.py  pyproject.toml  replit.md  satellite_data_source_analysis.py  setup_earth_engine_auth.py  show_all_esvd_values.py  show_esvd_calculations.py  show_regional_adjustment_formula.py  simple_test.py  temp_map_section.py  test_adapted_regional_method.py  test_agricultural_fix.py  test_button.py  test_calculations.py  (+12 more)
.agents/: agent_assets_metadata.toml
.streamlit/: config.toml
alembic/: env.py
attached_assets/: Pasted-EEI-Explorer-API-Base-URL-https-eei-stats-replit-app-1-_1769188093868.txt  Pasted-GeoTIFF-Pixel-Extraction-Implementation-Summary-Overview-Implemented-real-time-pixel-value-extractio-1757189454522_1757189454532.txt  Pasted-Here-are-the-debug-results-with-the-updated-2020-ESA-CCI-land-cover-data-1-Exact-URL-Your-Worki-1757714894834_1757714894834.txt  Pasted-Here-s-the-key-code-that-handles-the-OpenLandMap-STAC-API-calls-and-response-processing-1-Main--1756383815981_1756383815981.txt  (+4 more)
(+87 files in other folders)
