[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "streamlit-folium>=0.25.1",
    "streamlit>=1.48.1",
    "trafilatura>=2.0.0",
    "requests>=2.32.4",
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "streamlit-drawable-canvas>=0.9.3",
]
