[project]
name = "repl-nix-workspace"
version = "3.9.1"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "streamlit-folium>=0.25.1",
    "streamlit>=1.48.1",
    "trafilatura>=2.0.0",
    "requests>=2.32.4",
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "streamlit-drawable-canvas>=0.9.3",
    "earthengine-api>=1.6.3",
    "geemap>=0.36.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "alembic>=1.16.4",
    "openai>=1.100.2",
    "pillow>=11.3.0",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "landsatxplore>=0.15.0",
    "rasterio==1.3.10",
    "pyproj>=3.7.2",
    "aiohttp>=3.12.15",
    "pystac-client>=0.9.0",
    "certifi>=2025.8.3",
    "geopy>=2.4.1",
]
